--- a/src/main/resources/templates/admin/categories.html
+++ b/src/main/resources/templates/admin/categories.html
@@ -1,54 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="admin/_fragments :: head(~{::title})">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Type management</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../../static/css/me.css">
+    <title>CoraDev Category</title>
 </head>
 <body>
-
-    <!--navigation-->
-    <!--attached保证segment没有圆角-->
-    <nav th:replace="admin/_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini">
-        <div class="ui container">
-            <div class="ui inverted secondary stackable menu">
-                <h2 class="ui teal header item">backstage management</h2>
-                <a href="#" class="active m-item item m-mobile-hide"><i class="home icon"></i></i>Blog</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="idea icon"></i>Type</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
-                <div class="right menu">
-                    <div class="ui dropdown item">
-                        <div class="text">
-                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                            zhd
-                        </div>
-                        <i class="dropdown icon"></i>
-                        <div class="menu">
-                            <a href="#" class="item">Logout</a>
-                        </div>
-                    </div>
-                </div>
-
-            </right>
-            </div>
-        </div>
-        <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-            <i class="sidebar icon"></i>
-        </a>
+    <nav th:replace="admin/_fragments :: menu(2)">
     </nav>
     <div class="ui attached pointing menu">
         <div class="ui container">
             <div class="ui right menu">
-                <a href="#" th:href="@{/admin/types/input}" class="item">New</a>
-                <a href="#" th:href="@{/admin/types}" class="active teal item">List</a>
+                <a href="#" th:href="@{/admin/categories/input}" class="item">New</a>
+                <a href="#" th:href="@{/admin/categories}" class="active teal item">List</a>
             </div>
         </div>
-
     </div>
-
-    <!--中间内容-->
     <div class="m-padded-tb-large m-container-small">
         <div class="ui container">
             <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
@@ -65,12 +30,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="type,iterStat : ${page.content}">
+                    <tr th:each="category,iterStat : ${page.content}">
                         <td th:text="${iterStat.count}">1</td>
-                        <td th:text="${type.name}">story</td>
+                        <td th:text="${category.name}">story</td>
                         <td>
-                            <a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui teal button">Edit</a>
-                            <a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui red button">Delete</a>
+                            <a href="#" th:href="@{/admin/categories/{id}/input(id=${category.id})}" class="ui teal button">Edit</a>
+                            <a href="#" th:href="@{/admin/categories/{id}/delete(id=${category.id})}" class="ui red button">Delete</a>
                         </td>
                     </tr>
                 </tbody>
@@ -78,10 +43,10 @@
                     <tr>
                         <th colspan="6">
                             <div class="ui mini pagination menu" th:if="${page.totalPages} > 1">
-                                <a th:href="@{/admin/types(page=${page.number}-1)}" class="item" th:unless="${page.first}">Prev</a>
-                                <a th:href="@{/admin/types(page=${page.number}+1)}" class="item" th:unless="${page.last}">Next</a>
+                                <a th:href="@{/admin/categories(page=${page.number}-1)}" class="item" th:unless="${page.first}">Prev</a>
+                                <a th:href="@{/admin/categories(page=${page.number}+1)}" class="item" th:unless="${page.last}">Next</a>
                             </div>
-                            <a href="" th:href="@{/admin/types/input}" class="ui mini right floated teal basic button">New</a>
+                            <a href="" th:href="@{/admin/categories/input}" class="ui mini right floated teal basic button">New</a>
                         </th>
                     </tr>
                 </tfoot>
