--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="admin/_fragments :: head(~{::title})">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Blog Management</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../../static/css/me.css">
+    <title>CoraDev - Login</title>
 </head>
 <body>
-
     <div class="m-container-small m-padded-tb-massive" style="max-width: 30em !important;">
         <div class="ui middle aligned center aligned grid">
             <div class="column">
-                <h2 class="ui teal image header">
-                    <div class="content">
-                        Login
-                    </div>
-                </h2>
                 <form class="ui large form" method="post" action="#" th:action="@{/admin/login}">
                     <div class="ui stacked segment">
+                        <h2 class="ui orange image header">
+                            <div class="content">
+                                CoraDev Login
+                            </div>
+                        </h2>
                         <div class="field">
                             <div class="ui left icon input">
                                 <i class="user icon"></i>
@@ -31,28 +26,16 @@
                                 <input type="password" name="password" placeholder="Password">
                             </div>
                         </div>
-                        <button class="ui fluid large teal submit button">Login</button>
+                        <button class="ui fluid large inverted orange submit button">Login</button>
                     </div>
-
                     <div class="ui error mini message"></div>
-                    <div class="ui mini negative message" th:unless="${#strings.isEmpty(message)}" th:text="${message}">用户名和密码错误</div>
-
-
-
+                    <div class="ui mini negative message" th:unless="${#strings.isEmpty(message)}" th:text="${message}"></div>
                 </form>
-
-                <div class="ui message">
-                    New to us? <a href="#">Sign Up</a>
-                </div>
             </div>
         </div>
-
     </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-
 <script>
     $('.ui.form').form({
         fields: {
@@ -72,8 +55,6 @@
             }
         }
     });
-
-
 </script>
 </body>
 </html>
