--- a/src/main/resources/templates/admin/post-input.html
+++ b/src/main/resources/templates/admin/post-input.html
@@ -1,58 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="admin/_fragments :: head(~{::title})">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launch Blog</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../../static/lib/editormd/css/editormd.min.css" th:href="@{/lib/editormd/css/editormd.min.css}">
-    <link rel="stylesheet" href="../../static/css/me.css">
+    <title>Launch Post</title>
 </head>
 <body>
+<nav th:replace="admin/_fragments :: menu(1)">
+</nav>
 
-    <!--navigation-->
-    <!--attached保证segment没有圆角-->
-    <nav class="ui inverted attached segment m-padded-tb-mini">
-        <div class="ui container">
-            <div class="ui inverted secondary stackable menu">
-                <h2 class="ui teal header item">Backstage Management</h2>
-                <a href="#" class="active m-item item m-mobile-hide"><i class="home icon"></i></i>Blog</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="idea icon"></i>Type</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
-                <div class="right menu">
-                    <div class="ui dropdown item">
-                        <div class="text">
-                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                            zhd
-                        </div>
-                        <i class="dropdown icon"></i>
-                        <div class="menu">
-                            <a href="#" class="item">logout</a>
-                        </div>
-                    </div>
-                </div>
-
-            </right>
-            </div>
-        </div>
-        <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-            <i class="sidebar icon"></i>
-        </a>
-    </nav>
     <div class="ui attached pointing menu">
         <div class="ui container">
             <div class="ui right menu">
-                <a href="#" th:href="@{/admin/blogs/input}" class="active teal item">Launch</a>
-                <a href="#" th:href="@{/admin/blogs}" class="item">List</a>
+                <a href="#" th:href="@{/admin/posts/input}" class="active teal item">Launch</a>
+                <a href="#" th:href="@{/admin/posts}" class="item">List</a>
             </div>
         </div>
-
     </div>
-
-    <!--中间内容-->
     <div class="m-padded-tb-large m-container">
         <div class="ui container">
-            <form id="blog-form" action="#" th:object="${blog}" th:action="@{/admin/blogs}" method="post" class="ui form">
+            <form id="post-form" action="#" th:object="${post}" th:action="@{/admin/posts}" method="post" class="ui form">
 
                 <input type="hidden" name="published">
                 <input type="hidden" name="id" th:value="*{id}">
@@ -74,7 +39,7 @@
                 </div>
                 <div class="required field">
                     <div id="md-content" style="z-index: 1 !important;">
-                        <textarea name="content" placeholder="Blog content" style="display: none" th:text="*{content}"></textarea>
+                        <textarea name="content" placeholder="Post content" style="display: none" th:text="*{content}"></textarea>
                     </div>
 
                 </div>
@@ -82,14 +47,14 @@
                 <div class="two fields">
                     <div class="required field">
                         <div class="ui left labeled action input">
-                            <label class="ui compact teal basic label">Type</label>
+                            <label class="ui compact teal basic label">Category</label>
                             <div class="ui fluid selection dropdown">
-                                <input type="hidden" name="type.id"  th:value="*{type} != null ? *{type.id}">
-                                <input type="hidden" name="type.id"  th:value="*{type} != null ? *{type.id}">
+                                <input type="hidden" name="category.id"  th:value="*{category} != null ? *{category.id}">
+                                <input type="hidden" name="category.id"  th:value="*{category} != null ? *{category.id}">
                                 <i class="dropdown icon"></i>
-                                <div class="default text">Type</div>
+                                <div class="default text">Category</div>
                                 <div class="menu">
-                                    <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">Log</div>
+                                    <div th:each="category : ${categories}" class="item" data-value="1" th:data-value="${category.id}" th:text="${category.name}">Log</div>
                                 </div>
                             </div>
                         </div>
@@ -112,12 +77,12 @@
                 <div class="required field">
                     <div class="ui left labeled input">
                         <label class="ui teal basic label">Cover Picture</label>
-                        <input type="text" name="firstPicture" th:value="*{firstPicture}" placeholder="The reference of cover picture">
+                        <input type="text" name="coverImage" th:value="*{coverImage}" placeholder="The reference of cover picture">
                     </div>
                 </div>
 
                 <div class="required field">
-                    <textarea type="text" name="description" th:text="*{description}" maxlength="200" placeholder="blog description"></textarea>
+                    <textarea type="text" name="description" th:text="*{description}" maxlength="200" placeholder="post description"></textarea>
                 </div>
 
                 <div class="ui inline fields">
@@ -146,10 +111,7 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="ui error message"></div>
-
                 <div class="ui right aligned container">
                     <button type="button" class="ui button" onclick="window.history.go(-1)">Back</button>
                     <button type="button" id="save-btn" class="ui secondary button">Save</button>
@@ -161,45 +123,12 @@
 
 
     </div>
-
     <!--bottom-->
-    <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-        <div class="ui center aligned container">
-            <!--divide 16 col-->
-            <div class="ui inverted divided stackable grid">
-                <div class="four wide column">
-                    <div class="ui inverted link list">
-                        <div class="item">
-                            <img src="../static/images/show.jpg" th:src="@{/images/show.jpg}" class="ui rounded image" alt="" style="width: 110px">
-                        </div>
-                    </div>
-                </div>
-                <div class="eight wide column">
-                    <h4 class="ui inverted header m-text-spaced">about me</h4>
-                    <div class="ui inverted link list">
-                        <p class="m-text-thin m-text-spaced m-opacity-mini m-text-lined" >This is my personal blog, I will share my favorite articles, music, films, technological blog ...</p>
-                    </div>
-                </div>
-                <div class="four wide column">
-                    <h4 class="ui inverted header m-text-thin m-text-spaced m-text-lined">Contact Me</h4>
-                    <div class="ui inverted link list m-text-thin m-text-spaced m-text-lined">
-                        <a href="#" class="item">QQ：648398197</a>
-                        <a href="#" class="item">Email：648398197@qq.com</a>
-                    </div>
-                </div>
-
-            </div>
-            <div class="ui inverted section divider"></div>
-            <p class="m-text-thin m-text-spaced m-opacity-mini m-text-lined">Copyright © 2019 Designed by zhd</p>
-        </div>
-
-
+    <footer th:replace="admin/_fragments :: footer">
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <script src="../../static/lib/editormd/editormd.min.js" th:src="@{/lib/editormd/editormd.min.js}"></script>
-
     <script>
         $('.menu.toggle').click(function () {
             $('.m-item').toggleClass('m-mobile-hide');
@@ -235,8 +164,8 @@
                     }]
                 },
 
-                firstPicture: {
-                    identifier: 'firstPicture',
+                coverImage: {
+                    identifier: 'coverImage',
                     rules: [{
                         type: 'empty',
                         prompt: 'Attention：Please input reference of conver picture!'
@@ -252,7 +181,6 @@
                 }
             }
         });
-        //markdown插件初始化
         var contentEditor;
         $(function() {
             contentEditor = editormd("md-content", {
@@ -265,12 +193,12 @@
 
         $('#save-btn').click(function () {
             $('[name="published"]').val(false);
-            $('#blog-form').submit();
+            $('#post-form').submit();
         });
 
         $('#publish-btn').click(function () {
             $('[name="published"]').val(true);
-            $('#blog-form').submit();
+            $('#post-form').submit();
         });
 
 
