--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -1,42 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="admin/_fragments :: head(~{::title})">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Tag management</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="../../static/css/me.css">
 </head>
 <body>
-
-    <!--navigation-->
-    <!--attached保证segment没有圆角-->
-    <nav th:replace="admin/_fragments :: menu(3)" class="ui inverted attached segment m-padded-tb-mini">
-        <div class="ui container">
-            <div class="ui inverted secondary stackable menu">
-                <h2 class="ui teal header item">Backstage management</h2>
-                <a href="#" class="m-item item m-mobile-hide"><i class="home icon"></i>Blog</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="idea icon"></i>Type</a>
-                <a href="#" class="m-item item m-mobile-hide"><i class="tags icon"></i>Tag</a>
-                <div class="right menu">
-                    <div class="ui dropdown item">
-                        <div class="text">
-                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                            zhd
-                        </div>
-                        <i class="dropdown icon"></i>
-                        <div class="menu">
-                            <a href="#" class="item">Logout</a>
-                        </div>
-                    </div>
-                </div>
-
-            </right>
-            </div>
-        </div>
-        <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-            <i class="sidebar icon"></i>
-        </a>
+    <nav th:replace="admin/_fragments :: menu(3)">
     </nav>
     <div class="ui attached pointing menu">
         <div class="ui container">
@@ -45,7 +13,6 @@
                 <a href="#" th:href="@{/admin/tags}" class="active teal item">List</a>
             </div>
         </div>
-
     </div>
     <!--Content-->
     <div class="m-padded-tb-large m-container-small">
@@ -85,54 +52,10 @@
                     </tr>
                 </tfoot>
             </table>
-
         </div>
-
-
     </div>
-
-    <!--底部-->
-    <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
-        <div class="ui center aligned container">
-            <!--分成16份-->
-            <div class="ui inverted divided stackable grid">
-                <div class="three wide column">
-                    <div class="ui inverted link list">
-                        <div class="item">
-                            <img src="../../static/images/show.jpg" class="ui rounded image" alt="" style="width: 110px">
-                        </div>
-                    </div>
-                </div>
-                <div class="four wide column">
-                    <h4 class="ui inverted header m-text-thin m-text-spaced m-text-lined">最新博客</h4>
-                    <div class="ui inverted link list m-text-thin m-text-spaced m-text-lined">
-                        <a href="#" class="item">用户故事</a>
-                        <a href="#" class="item">大城小事</a>
-                        <a href="#" class="item">东民西摇</a>
-                        <a href="#" class="item">可乐兑白开</a>
-                    </div>
-                </div>
-                <div class="four wide column">
-                    <h4 class="ui inverted header m-text-thin m-text-spaced m-text-lined">联系方式</h4>
-                    <div class="ui inverted link list m-text-thin m-text-spaced m-text-lined">
-                        <a href="#" class="item">QQ：648398197</a>
-                        <a href="#" class="item">Email：648398197@qq.com</a>
-                    </div>
-                </div>
-                <div class="five wide column">
-                    <h4 class="ui inverted header m-text-spaced">关于我</h4>
-                    <div class="ui inverted link list">
-                        <p class="m-text-thin m-text-spaced m-opacity-mini m-text-lined" >这是我的个人博客，会分享关于编程，音乐，喜爱的文章......</p>
-                    </div>
-                </div>
-            </div>
-            <div class="ui inverted section divider"></div>
-            <p class="m-text-thin m-text-spaced m-opacity-mini m-text-lined">Copyright © 2019 Designed by zhd</p>
-        </div>
-
-
+    <footer th:replace="admin/_fragments :: footer">
     </footer>
-
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
